# PytestOps

./: .env.example  .gitignore  .gitlab-ci.yml  Jenkinsfile  PROJECT_GUIDE.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish-ntf-sample-plugin-testpypi.yml
configs/: default.yaml
demo_project/: README.md
demo_project/cases/: user_flow.yaml
demo_project/configs/: demo.yaml
mock_server/base/: flask_service.py
mock_server/data/mockdata/: orderNumber.json  userManage.json
ntf/: __init__.py  __main__.py  allure_results.py  assertions.py  cli.py  config.py  data_factory.py  executor.py  extract.py  fixtures.py  http.py  plugins.py  pytest_plugin.py  renderer.py  yaml_case.py
ntf/integrations/: __init__.py  dingding.py
plugins/ntf_sample_plugin/: README.md  pyproject.toml  setup.cfg
plugins/ntf_sample_plugin/ntf_sample_plugin/: assertions.py  functions.py  renderer.py  reporter.py  transport.py
report/: legacy-run-3.json  legacy-run-4.json  legacy-run-6.json  legacy-run-7.json  migrate-check.json  migrate-index.json  run-yaml.json
report/allure-results/: 33b4d1cb-b1b5-4d09-a9c2-1ca9db845c38-result.json  377d0ac2-2b72-47ec-a6ca-8efac550b212-result.json  9e9d4064-5ed2-4346-88f6-81e771f7b9d4-result.json  a71ac808-14cd-48da-808e-0211aa4d5b23-container.json  ab03bfad-6d3c-4d3d-ba4b-07b135466181-container.json  b180f60e-d4ed-4e43-9fa9-cdda6d0be1b3-container.json  e50d6966-1708-45b2-8723-161288e3e57f-container.json
tests/: conftest.py  test_assertions_enhanced.py  test_config_profiles.py  test_debugtalk_injection.py  test_dingding_run_yaml_notify.py  test_doctor_and_version.py  test_env_autoload.py  test_executor_unit.py  test_p1_cli_features.py  test_plugins_and_data_factory.py  test_run_yaml_allure_results.py  test_yaml_driven_offline.py
tests/data/: sample_api.yaml  sample_api_legacy_render.yaml  sample_api_pass_fail.yaml
tests/fixtures/: users.yaml
