[metadata]
name = ntf-sample-plugin
version = 0.1.3
description = Sample plugin pack for PytestOps (ntf)
long_description = file: README.md
long_description_content_type = text/markdown
requires_python = >=3.12

[options]
packages = find:
install_requires =
    PytestOps-framework>=0.1.0
    jsonpath>=0.82.2

[options.entry_points]
ntf.assertions =
    startswith = ntf_sample_plugin.assertions:assert_startswith
ntf.functions =
    functions = ntf_sample_plugin.functions:FUNCTIONS
ntf.reporters =
    print = ntf_sample_plugin.reporter:print_report
ntf.transports =
    requests_no_session = ntf_sample_plugin.transport:requests_no_session
ntf.renderers =
    upper = ntf_sample_plugin.renderer:UpperRenderer

[options.packages.find]
include =
    ntf_sample_plugin*
